gobmkida/c3/prepare_goal_list
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5647:12: error: expected expression
*( _OWORD *)&owl_goal_worm[11] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5647:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl_goal_worm[11] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5648:12: error: expected expression
*( _OWORD *)&owl_goal_worm[8] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5648:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl_goal_worm[8] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5649:12: error: expected expression
*( _OWORD *)&owl_goal_worm[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5649:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl_goal_worm[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5650:12: error: expected expression
*( _OWORD *)owl_goal_worm = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5650:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)owl_goal_worm = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5730:12: error: expected expression
*( _OWORD *)( v25 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5730:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v25 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5730:44: error: expected expression
*( _OWORD *)( v25 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5730:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v25 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5731:12: error: expected expression
*( _OWORD *)( v25 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5731:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v25 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5731:44: error: expected expression
*( _OWORD *)( v25 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5731:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v25 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5732:12: error: expected expression
*( _OWORD *)( v25 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5732:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v25 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5732:44: error: expected expression
*( _OWORD *)( v25 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5732:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v25 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5733:12: error: expected expression
*( _OWORD *)&dragon_goal_worms[v25 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5733:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v25 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5733:60: error: expected expression
*( _OWORD *)&dragon_goal_worms[v25 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/engine/owl.c:5733:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v25 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                   ^
24 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/prepare_goal_list/src/obj/1/owl.o] Error 1
